# linalgo

./: Cargo.toml  README.md
linalgo_structs/: Cargo.toml
linalgo_structs/src/: lib.rs
src/: lib.rs  main.rs
